--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <p class="sectionSubTag text-small">A hobby is considered to be a regular activity that is done for enjoyment, typically during one's leisure time. Hobbies include collecting themed items and objects, engaging in creative and artistic pursuits, playing sports, or pursuing other amusements. Participation in hobbies encourages acquiring substantial skills and knowledge in that area. A list of hobbies changes with renewed interests and developing fashions, making it diverse and lengthy. Hobbies tend to follow trends in society. For example, stamp collecting was popular during the nineteenth and twentieth centuries as postal systems were the main means of communication; as of 2023, video games became more popular following technological advances. The advancing production and technology of the nineteenth century provided workers with more leisure time to engage in hobbies. Because of this, the efforts of people investing in hobbies has increased with time.</p>
         </div>
         <div class="thumbnail">
-            <img src="img3.jpg" alt="img" class="imgFluid">
+            <img src="img3.jpg" alt="img">
         </div>
     </section>
 
     <section class="section">
         <div class="thumbnail">
-            <img src="img2.jpg" alt="img" class="imgFluid" height="250px" width="250px">
+            <img src="img2.jpg" alt="img" height="250px" width="250px">
         </div>
         <div class="paras">
             <p class="text-big"></p>
@@ -60,7 +60,7 @@
 
     <section class="section">
         <div class="thumbnail">
-            <img src="img1.jpg" alt="img" class="imgFluid" height="250px" width="250px">
+            <img src="img1.jpg" alt="img" height="250px" width="250px">
         </div>
         <div class="paras">
             <p class="text-big">Types of Hobbies</p>
